<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Corporate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="corporate_name">单位名称 | </string>
    <string name="corporate_address">单位地址 | </string>
    <string name="corporate_license">营业执照 | </string>
    <string name="corporate_intro">单位简介 | </string>
    <string name="upload">点击上传</string>
    <string name="jpost_name">岗位标题 | </string>
    <string name="jpost_num">招聘人数 | </string>
    <string name="jpost_salary">月薪 | </string>
    <string name="jpost_type">岗位类别 | </string>
    <string name="jpost_describ">岗位描述 | </string>
    <string name="jpost_demand">岗位要求 | </string>
    <string name="deadline">有效期限 | </string>
    <string name="jpost_addr">工作地址 | </string>
    <string name="linkman">联系人 | </string>
    <string name="phone">联系电话 | </string>
    <string name="jpost_tag">岗位描述 | </string>
    <string name="tag">标签项 | </string>
    <string name="area">所在地 | </string>
    <string name="please_select">请选择</string>
    <string name="publish_job">发布岗位</string>
    <string name="text_num_limited_30">不超过30个字</string>
    <string name="corporate_phone_hint">请填写手机或固定电话</string>
    <string name="corporate_address_hint">请填单位地址</string>
    <string name="corporate_intro_hint">请填单位简介，不超过100个字</string>
    <string name="commit_auth_data">提交认证资料</string>
    <string name="done_auth_progress">已完成认证流程</string>
    <string name="check_info_center">查看消息中心</string>
    <string name="auth_info">  \t\t您已完成企业认证流程，请耐心等待审核。审核时间为1&#8211;3个工作日。如果通过认证，将在消息中心通知您。如有问题请致电010&#8211;82212999</string>
    <string name="text_num_limited_10">不超过10个字</string>
    <string name="text_num_limited2_10">不少于10个字</string>
    <string name="text_num_limited2_20">不少于20个字</string>
    <string name="ren">人</string>
    <string name="select_classes">选择分类</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="un_corporate_user_cont">只有企业用户才能发布岗位\n您可以注销当前账号，重新注册企业用户</string>
    <string name="unregist">注销当前账号</string>
    <string name="fillin_auth_info">填写认证资料</string>
    <string name="camera">相机拍摄</string>
    <string name="phoneGallery">手机相册</string>
    <string name="authing">等待审核中</string>
    <string name="jpost_manage">岗位管理</string>
    <string name="overdue">已过期</string>
    <string name="published">已发布</string>

</resources>